# gfx_demo

./: .clang-format  CMakeLists.txt  README.md
data/: cube.glb
src/: CMakeLists.txt  main.cpp
src/asset/: asset.hpp  asset_handle.hpp  asset_loader.cpp  asset_loader.hpp  io_job.hpp  job.hpp  job_handle.hpp  loader.hpp  path.cpp  path.hpp
src/graphics/api/: i_blend_state.hpp  i_depth_stencil_state.hpp  i_rasterizer_state.hpp
src/graphics/dx12/: blend_state.hpp  depth_stencil_state.hpp  dx.cpp  dx.hpp  rasterizer_state.hpp  versioning.hpp
src/graphics/dx12/demo/: bundles.cpp  bundles.hpp  cubed_cat.cpp  cubed_cat.hpp  depth_buffering.cpp  depth_buffering.hpp  multisampling.cpp  multisampling.hpp  ndc_triangle.cpp  ndc_triangle.hpp  normal_mapping.cpp  normal_mapping.hpp  perspective_cat.cpp  perspective_cat.hpp  phong_lighting.cpp  phong_lighting.hpp  placed_cat.cpp  placed_cat.hpp  resizing.cpp  resizing.hpp  spinning_cat.cpp  spinning_cat.hpp  spinning_quad.cpp  spinning_quad.hpp  spinning_triangle.cpp  spinning_triangle.hpp  timing.cpp  timing.hpp  vertex_triangle_ia.cpp  vertex_triangle_ia.hpp  vertex_triangle_pull.cpp  vertex_triangle_pull.hpp
src/graphics/dx12/demos/: cubed_cat.cpp  cubed_cat.hpp  ndc_triangle.cpp  ndc_triangle.hpp  perspective_cat.cpp  perspective_cat.hpp  spinning_cat.cpp  spinning_cat.hpp  spinning_quad.cpp  spinning_quad.hpp  spinning_triangle.cpp  spinning_triangle.hpp  vertex_triangle.cpp  vertex_triangle.hpp  vertex_triangle_ia.cpp  vertex_triangle_ia.hpp  vertex_triangle_pull.cpp  vertex_triangle_pull.hpp
src/graphics/dx12/shader/ps/: normal_mapping.hlsl  normal_mapping_tangent.hlsl  normal_mapping_world.hlsl  phong_lighting.hlsl  spinning_cat.hlsl  white.hlsl
src/graphics/dx12/shader/vs/: cubed_cat.hlsl  ndc_triangle.hlsl  normal_mapping.hlsl  normal_mapping_tangent.hlsl  normal_mapping_world.hlsl  perspective_cat.hlsl  phong_lighting.hlsl  spinning_cat.hlsl  vertex_triangle_ia.hlsl  vertex_triangle_pull.hlsl  vertex_triangle_spinning.hlsl
src/graphics/dx12/shaders/ps/: white.hlsl
src/graphics/dx12/shaders/vs/: cubed_cat.hlsl  ndc_triangle.hlsl  spinning_cat.hlsl  vertex_triangle.hlsl  vertex_triangle_pull.hlsl  vertex_triangle_spinning.hlsl
src/stl_util/: functional.hpp  index_iterator.hpp
src/util/: align.hpp  circular_buffer.hpp  concurrent_data.hpp  file_util.cpp  file_util.hpp  fixed_vector.hpp  offset_counter.hpp  path.cpp  path.hpp  stbi.cpp  stbi.hpp
